--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Laevade pommitamine</title>
+        <title>Battleships</title>
 
         <link rel="stylesheet" href="styles/page&misc.css">
         <link rel="stylesheet" href="styles/gameboard.css">
@@ -25,10 +25,10 @@
     </head>
     <body>
         <div id="pageContainer">
-            <h1 id="title">Laevade pommitamine <a href="offline/">(Online mode)</a></h1>
+            <h1 id="title">Battleships <a href="offline/">(Online mode)</a></h1>
             <!-- <div class="button" id="login">Logged in as (Unnamed)</div> -->
 
-            <div class="connection-slider flex"><div class="done"></div></div>
+            <div class="flex"><div class="connection-slider"><div></div></div></div>
             <div id="menubar" class="flex">
                 <div class="button selected" id="menu_new_game"><span>New game</span></div>
                 <div class="button" id="menu_scoreboard"><span>Scoreboard</span></div>
