--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
             <div id="boards" class="hidden">
                 <div id="gamestatus" class="flex">
-                    <div class="own">Connected</div>
+                    <div class="status">Connected</div>
                     <div class="opponent">Waiting for opponent</div>
                 </div>
                 <table class="board opponent AI">
