--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 
             <div id="boards" class="hidden">
                 <div id="gamestatus" class="flex">
-                    <div class="status">Connected</div>
-                    <div class="opponent">Waiting for opponent</div>
+                    <div class="status">Submit your ships</div>
+                    <div class="opponent"></div>
                 </div>
                 <table class="board opponent AI">
                     <tr>
@@ -128,14 +128,17 @@
             </div>
 
             <div id="scoreboard" class="hidden">
+                <br>
                 <table>
+                    <tr class="header"><td colspan="7"><input id="namefilter" type="text" placeholder="player name"></td></tr>
                     <tr class="header">
-                        <th>Võitja</th>
-                        <th>Sinu lasud</th>
-                        <th>Vastase lasud</th>
-                        <th>Aeg</th>
-                        <th>Laua suurus</th>
-                        <th>Laevade arv</th>
+                        <th>Player1</th>
+                        <th>hits/shots</th>
+                        <th>Player2</th>
+                        <th>hits/shots</th>
+                        <th>Winner</th>
+                        <th>Duration</th>
+                        <th>Date</th>
                     </tr>
                 </table>
             </div>
